--- a/app/i18n/cs-CZ/settings.json
+++ b/app/i18n/cs-CZ/settings.json
@@ -143,11 +143,13 @@
   "Uninstall Virtual Webcam": "Odinstalovat Virtual Webcam",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
-  "Unable to start virtual camera.\n\nPlease try again.": "Unable to start virtual camera.\n\nPlease try again.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions",
   "An error has occured while installing the virtual camera": "Při instalaci virtuální kamery došlo k chybě.",
   "An error has occured while uninstalling the virtual camera": "Při odinstalování virtuální kamery došlo k chybě.",
   "Streamlabs Desktop cannot install the virtual camera if it's not in Applications. Please move Streamlabs Desktop to the Applications directory.": "Streamlabs Desktop nemůže nainstalovat virtuální kameru, pokud není v Aplikacích. Přesuňte Streamlabs Desktop do adresáře Aplikace.",
   "The installation of the virtual camera will complete after a system reboot.": "Instalace virtuální kamery bude dokončena po restartování systému.",
+  "Streamlabs Virtual Webcam feature requires macOS 13 or later.": "Streamlabs Virtual Webcam feature requires macOS 13 or later.",
   "Output Type": "Typ výstupu",
   "Output Selection": "Výběr výstupu",
   "Output Source": "Zdroj výstupu",
