--- a/app/i18n/ko-KR/settings.json
+++ b/app/i18n/ko-KR/settings.json
@@ -143,11 +143,13 @@
   "Uninstall Virtual Webcam": "가상 웹캠 제거",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
-  "Unable to start virtual camera.\n\nPlease try again.": "Unable to start virtual camera.\n\nPlease try again.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions",
   "An error has occured while installing the virtual camera": "가상 카메라를 설치하는 중에 오류가 발생했습니다.",
   "An error has occured while uninstalling the virtual camera": "가상 카메라를 제거하는 중에 오류가 발생했습니다.",
   "Streamlabs Desktop cannot install the virtual camera if it's not in Applications. Please move Streamlabs Desktop to the Applications directory.": "가상 카메라가 애플리케이션에 없는 경우 Streamlabs Desktop에서 가상 카메라를 설치할 수 없습니다. Streamlabs Desktop을 애플리케이션 디렉터리로 옮기세요.",
   "The installation of the virtual camera will complete after a system reboot.": "시스템을 재부팅하면 가상 카메라 설치가 완료됩니다.",
+  "Streamlabs Virtual Webcam feature requires macOS 13 or later.": "Streamlabs Virtual Webcam feature requires macOS 13 or later.",
   "Output Type": "출력 유형",
   "Output Selection": "출력 선택",
   "Output Source": "출력 소스",
