--- a/app/i18n/pl-PL/settings.json
+++ b/app/i18n/pl-PL/settings.json
@@ -143,11 +143,13 @@
   "Uninstall Virtual Webcam": "Odinstaluj Wirtualną kamerę internetową",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
-  "Unable to start virtual camera.\n\nPlease try again.": "Unable to start virtual camera.\n\nPlease try again.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions",
   "An error has occured while installing the virtual camera": "Wystąpił błąd podczas instalacji kamery wirtualnej.",
   "An error has occured while uninstalling the virtual camera": "Wystąpił błąd podczas odinstalowywania kamery wirtualnej.",
   "Streamlabs Desktop cannot install the virtual camera if it's not in Applications. Please move Streamlabs Desktop to the Applications directory.": "Aplikacja Streamlabs Desktop nie może zainstalować kamery wirtualnej, jeśli nie znajduje się ona w Aplikacjach. Przenieś aplikację Streamlabs Desktop do katalogu Aplikacje.",
   "The installation of the virtual camera will complete after a system reboot.": "Instalacja kamery wirtualnej zostanie zakończona po ponownym uruchomieniu systemu.",
+  "Streamlabs Virtual Webcam feature requires macOS 13 or later.": "Streamlabs Virtual Webcam feature requires macOS 13 or later.",
   "Output Type": "Rodzaj informacji wyjściowych",
   "Output Selection": "Wybór informacji wyjściowych",
   "Output Source": "Źródło informacji wyjściowych",
