--- a/app/i18n/pt-PT/settings.json
+++ b/app/i18n/pt-PT/settings.json
@@ -143,11 +143,13 @@
   "Uninstall Virtual Webcam": "Desinstalar Webcam virtual",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
-  "Unable to start virtual camera.\n\nPlease try again.": "Unable to start virtual camera.\n\nPlease try again.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions",
   "An error has occured while installing the virtual camera": "Ocorreu um erro durante a instalação da câmara virtual",
   "An error has occured while uninstalling the virtual camera": "Ocorreu um erro durante a desinstalação da câmara virtual",
   "Streamlabs Desktop cannot install the virtual camera if it's not in Applications. Please move Streamlabs Desktop to the Applications directory.": "O Streamlabs Desktop não consegue instalar a câmara virtual se não estiver em Aplicações. Move o Streamlabs Desktop para o diretório de Aplicações.",
   "The installation of the virtual camera will complete after a system reboot.": "A instalação da câmara virtual ficará concluída depois de se reiniciar o sistema.",
+  "Streamlabs Virtual Webcam feature requires macOS 13 or later.": "Streamlabs Virtual Webcam feature requires macOS 13 or later.",
   "Output Type": "Tipo de saída",
   "Output Selection": "Seleção de saída",
   "Output Source": "Fonte de saída",
