--- a/app/i18n/tr-TR/settings.json
+++ b/app/i18n/tr-TR/settings.json
@@ -143,11 +143,13 @@
   "Uninstall Virtual Webcam": "Sanal Web Kamerasını Kaldır",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
-  "Unable to start virtual camera.\n\nPlease try again.": "Unable to start virtual camera.\n\nPlease try again.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions",
   "An error has occured while installing the virtual camera": "Sanal kamera yüklenirken bir hata oluştu",
   "An error has occured while uninstalling the virtual camera": "Sanal kamera kaldırılırken bir hata oluştu",
   "Streamlabs Desktop cannot install the virtual camera if it's not in Applications. Please move Streamlabs Desktop to the Applications directory.": "Streamlabs Desktop, Uygulamalar bölümünde bulunmuyosa sanal kamerayı yükleyemez. Lütfen Streamlabs Desktop'ı Uygulamalar dizinine taşıyın.",
   "The installation of the virtual camera will complete after a system reboot.": "Sanal kameranın kurulumu, sistem yeniden başlatıldıktan sonra tamamlanacaktır.",
+  "Streamlabs Virtual Webcam feature requires macOS 13 or later.": "Streamlabs Virtual Webcam feature requires macOS 13 or later.",
   "Output Type": "Çıkış Türü",
   "Output Selection": "Çıkış Seçimi",
   "Output Source": "Çıkış Kaynağı",
