--- a/app/i18n/zh-CN/settings.json
+++ b/app/i18n/zh-CN/settings.json
@@ -143,11 +143,13 @@
   "Uninstall Virtual Webcam": "卸载虚拟网络摄像头",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install system software in System Settings → Privacy & Security → Security.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
   "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.": "The virtual camera is not installed.\n\nPlease allow Streamlabs Desktop to install the camera system extension in System Settings → General → Login Items & Extensions → Camera Extensions.\n\nYou may need to restart Streamlabs Desktop if this message still appears afterward.",
-  "Unable to start virtual camera.\n\nPlease try again.": "Unable to start virtual camera.\n\nPlease try again.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → Privacy & Security → Security.",
+  "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions.": "Unable to start virtual camera.\n\nYou may need to enable permissions. To do this, go to System Settings → General → Login Items & Extensions → Camera Extensions",
   "An error has occured while installing the virtual camera": "安装虚拟摄像头时发生错误",
   "An error has occured while uninstalling the virtual camera": "卸载虚拟摄像头时发生错误",
   "Streamlabs Desktop cannot install the virtual camera if it's not in Applications. Please move Streamlabs Desktop to the Applications directory.": "如果虚拟摄像头不在应用程序中，Streamlabs Desktop 则无法安装。请将 Streamlabs Desktop 移动至应用程序目录。",
   "The installation of the virtual camera will complete after a system reboot.": "虚拟摄像头的安装将在系统重启后完成。",
+  "Streamlabs Virtual Webcam feature requires macOS 13 or later.": "Streamlabs Virtual Webcam feature requires macOS 13 or later.",
   "Output Type": "输出类型",
   "Output Selection": "输出选择",
   "Output Source": "输出源",
